# foundry2react

./: .gitignore  Cargo.toml  README.md  accounts.toml
examples/Token/: Token.abi.json  Token.sol
examples/Token/test/: Token.t.sol
src/: abi_parser.rs  foundry_test_parser.rs  generator.rs  main.rs  parser.rs
templates/: react_component.hbs
