[package]
name = "foundry2react"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.3"
clap = { version = "4.0", features = ["derive"] }
solang-parser = "0.3"
log = "0.4.22"
