[package]
name = "foundry2react"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.0.0"
clap = { version = "4.0", features = ["derive"] }
solang-parser = "0.3"
darling = "0.20.10"
syn = "2.0.72"
quote = "1.0"
proc-macro2 = "1.0"
log = "0.4.22"
regex = "1.5.4"
